@@ -1,3 +1,10 @@
+2015-04-02  Renlin Li  <renlin.li@arm.com>
+
+	* config/tc-aarch64.c (mapping_state): Emit MAP_DATA within text section in order.
+	(mapping_state_2): Don't emit MAP_DATA here.
+	(s_aarch64_inst): Align frag during state transition.
+	(md_assemble): Likewise.
+
 2015-04-02  Ed Maste  <emaste@freebsd.org>
 
 	* config/tc-aarch64.c (set_error_kind): Delete.
